--- a/web-server/views/about.hbs
+++ b/web-server/views/about.hbs
@@ -7,8 +7,8 @@
 
 <body>
   <header>
-    <h1>About Us</h1>
-    <img src="/images/sunabouzu.jpg" alt="sunabouzu" />
+    <h1>{{ title }}</h1>
+    <img src={{ image }} alt={{ description }} />
   </header>
 </body>
 
