--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -3,12 +3,12 @@
 
 <head>
   <link href="/css/styles.css" rel="stylesheet" />
-  <script src="/js/app.js"></script>
 </head>
 
 <body>
   <header>
-    <h1>{{ title }}</h1>
+    {{>header}}
+    <img src={{ image }} alt={{ description }} />
   </header>
 </body>
 
