--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -7,8 +7,8 @@
 
 <body>
   <header>
-    <h1>{{ title }}</h1>
-    <img src={{ image }} alt={{ description }} />
+    {{>header}}
+    <p>{{ message }}</p>
   </header>
 </body>
 
