--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -3,12 +3,13 @@
 
 <head>
   <link href="/css/styles.css" rel="stylesheet" />
+  <script src="/js/app.js"></script>
 </head>
 
 <body>
+
   <header>
-    <h1>{{ title }}</h1>
-    <p>{{ message }}</p>
+    {{>header}}
   </header>
 </body>
 
