web-server: solution to challenge "add footer"   * add styles and container too

--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -5,3 +5,10 @@ h1 {
 img {
   width: 250px;
 }
+
+.container {
+  display: flex;
+  flex-flow: column;
+  height: 100vh;
+  justify-content: space-between;
+}
