--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -6,10 +6,13 @@
 </head>
 
 <body>
-  <header>
-    {{>header}}
-    <img src={{ image }} alt={{ description }} />
-  </header>
+  <main class="container">
+    <header>
+      {{>header}}
+      <img src={{ image }} alt={{ description }} />
+    </header>
+    {{>footer}}
+  </main>
 </body>
 
 </html>
