--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -6,10 +6,13 @@
 </head>
 
 <body>
-  <header>
-    {{>header}}
-    <p>{{ message }}</p>
-  </header>
+  <main class="container">
+    <header>
+      {{>header}}
+      <p>{{ message }}</p>
+    </header>
+    {{>footer}}
+  </main>
 </body>
 
 </html>
