--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-
-  <header>
-    {{>header}}
-  </header>
+  <main class="container">
+    <header>
+      {{>header}}
+    </header>
+    {{>footer}}
+  </main>
 </body>
 
 </html>
