--- a/web-server/templates/views/not-found.hbs
+++ b/web-server/templates/views/not-found.hbs
@@ -10,7 +10,9 @@
   <div class="container">
     {{>header}}
     <main>
-      <p>This is the home page</p>
+      <div>
+        <h2>{{ message }}</h2>
+      </div>
     </main>
     {{>footer}}
   </div>
