--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -1,5 +1,14 @@
+body {
+  box-sizing: border-box;
+  /* height: 100vh; */
+  width: 80vw;
+  margin: 0;
+  padding: 0;
+  margin: 0 auto;
+}
+
 h1 {
-  color: gray;
+  color: black;
 }
 
 img {
@@ -12,4 +21,42 @@ img {
   flex-flow: column;
   height: 100vh;
   justify-content: space-between;
+  padding: 10px;
+}
+
+.container main {
+  height: 90vh;
+  /* padding: 0 30px; */
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header li {
+  list-style: none;
+  padding: 0 5px;
+}
+
+.header a {
+  text-decoration: none;
+}
+
+.header ul {
+  display: flex;
+}
+
+.header nav {
+  display: flex;
+  height: 100%;
+  flex-flow: column;
+  justify-content: space-evenly;
+}
+
+footer {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  color: gray;
 }
