--- a/web-server/templates/partials/header.hbs
+++ b/web-server/templates/partials/header.hbs
@@ -1,8 +1,10 @@
-<header>
+<header class="header">
   <h1>{{ title }}</h1>
-  <div>
-    <a href="/">Weather</a>
-    <a href="/about">About</a>
-    <a href="/help">Help</a>
-  </div>
+  <nav>
+    <ul>
+      <li><a href="/about">About</a></li>
+      <li><a href="/">Weather</a></li>
+      <li><a href="/help">Help</a></li>
+    </ul>
+  </nav>
 </header>
