--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -10,7 +10,7 @@
     {{>header}}
     <main>
       <header>
-        <img src={{ image }} alt={{ description }} />
+        <img class="portrait" src={{ image }} alt={{ description }} />
       </header>
     </main>
     {{>footer}}
