--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -3,16 +3,27 @@
 
 <head>
   <link href="/css/styles.css" rel="stylesheet" />
-  <script src="/js/app.js"></script>
 </head>
 
 <body>
   <div class="container">
     {{>header}}
     <main>
-      <p>This is the home page</p>
+      <p>Use this site to get your weather!</p>
+      <form>
+        <label for="address">Address: </label>
+        <input id="address" type="text" placeholder="address">
+        <button>Submit</button>
+        <p id="loader" class="hidden">Loading...</p>
+        <p id="error" class="error hidden"></p>
+        <div id="forecast-container" class="hidden">
+          <p id="location"></p>
+          <p id="forecast"></p>
+        </div>
+      </form>
     </main>
     {{>footer}}
+    <script src="/js/app.js"></script>
   </div>
 </body>
 
